# UnnamedShooter

./: .gitignore  README.md  meson.build
assets/: sandylandscape.mtl  upheaval.fnt
src/: Configuration.cpp  Configuration.h  Display.cpp  Display.h  Entrypoint.cpp  Input.cpp  Input.h  MathHelpers.cpp  MathHelpers.h  MathTypes.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Simulation.cpp  Simulation.h  Types.h  pch.h
src/Entities/: CameraEntity.cpp  CameraEntity.h  CubeEntity.h  Entity.h
src/Entity/: CameraEntity.cpp  CameraEntity.h  CubeEntity.h  Entity.h  LandscapeEntity.cpp  LandscapeEntity.h  PlayerEntity.cpp  PlayerEntity.h
src/Mesh/: Mesh.cpp  Mesh.h
src/Overlay/: DebugOverlay.cpp  DebugOverlay.h  Overlay.h
src/Painter/: TextPainter.cpp
src/Painters/: TextPainter.cpp  TextPainter.h
src/Renderer/: RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h
src/Texture/: PngTexture.cpp  PngTexture.h
src/Utility/: LoggingHelpers.h  SDLWrappers.h
subprojects/: fpm.wrap  stb.wrap
subprojects/packagefiles/fpm/: meson.build
subprojects/packagefiles/stb/: meson.build
test/: MathTests.cpp  RenderTests.cpp  testpch.h
